make mapping stage can run and improve local storage service